# recruitment_ai_rag

./: .env.dev  .env.prod  .env.stg  .gitignore  README.md  main.py  pyproject.toml
app/core/: config.py  logger.py
app/db/: chroma_store.py
app/embedding/: encoder.py  factory.py
app/llm/: __init__.py  email_generator.py  factory.py  gemini_wrapper.py  interfaces.py  output_parser.py
app/mlflow/: eval.py  prompts.py  setup.py
app/models/: __init__.py  jd.py  resume.py
app/prompts/: interview_email_prompt.txt  jd_prompt.txt  matching_prompt.txt  rejection_email_prompt.txt  remarks_prompt.txt
app/routes/: __init__.py  jd.py  resume.py  web.py
app/services/: embedding.py  matching.py  skill_gap.py
app/templates/: base.html  form.html  jd_form.html  jd_results.html  results.html
app/utils/: file_parser.py
examples/: jd.txt
examples/resumes/: resume1.txt
scripts/: benchmark_embeddings.py
